--- a/Views/Tienda/Productos.cshtml
+++ b/Views/Tienda/Productos.cshtml
@@ -22,5 +22,4 @@
 </div>
 <script src="~/js/botonMas.js"></script>
 <script src="~/js/botonMenos.js"></script>
-
-
+<script src="~/js/botonComprar.js"></script>
