--- a/Views/Cliente/Registro.cshtml
+++ b/Views/Cliente/Registro.cshtml
@@ -294,6 +294,8 @@
     </div>
     <script>
         // variables globales
+        const modalAltaDirecccion = new bootstrap.Modal(document.getElementById('formAltaDir'))
+        const modalAltaTlfn = new bootstrap.Modal(document.getElementById('formAltaTlfno'))
         let esDireccionModif = false
         let esTlfnModif = false
         let posDireccionModif = 0
