--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -76,11 +76,11 @@
                     <div class="row">
                         @if (categorias != null)
                         {
-                            <ul id="treeviewCat">
-                            </ul>
-                        } else 
+                        <ul id="treeviewCat">
+                        </ul>
+                        } else
                         {
-                            @await Component.InvokeAsync("OpcionesPanelCliente");
+                        @await Component.InvokeAsync("OpcionesPanelCliente");
                         }
                     </div>
                 </div>
@@ -90,42 +90,42 @@
             </div>
             @if (this.Context.Request.Path.ToString().Contains("Productos"))
             {
-                <div class="col-2">
-                    <img src="~/images/imagen_header_minicarro.png">
-                    <ul class="nav nav-tabs" id="miniCesta" role="tablist">
-                        <li class="nav-item" role="presentation">
-                            <button class="nav-link active" id="cesta-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Mi Cesta</button>
-                        </li>
-                        <li class="nav-item" role="presentation">
-                            <button class="nav-link" id="listas-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Mis Listas</button>
-                        </li>
-                    </ul>
-                    <div class="tab-content" id="myTabContent">
-                        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="cesta-tab">
-                            <table class="table">
-                                <thead style="background-color: orange;">
-                                    <tr>
-                                        <th scope="col">Descrip/EAN</th>
-                                        <th scope="col">Cant.</th>
-                                        <th scope="col">Precio</th>
-                                        <th scope="col" style="color: red;">Quitar</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="itemsMiniCesta">
-                                    @foreach (ItemPedido item in cliente.PedidoActual.ElementosPedido)
+            <div class="col-2">
+                <img src="~/images/imagen_header_minicarro.png">
+                <ul class="nav nav-tabs" id="miniCesta" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link active" id="cesta-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Mi Cesta</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="listas-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Mis Listas</button>
+                    </li>
+                </ul>
+                <div class="tab-content" id="myTabContent">
+                    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="cesta-tab">
+                        <table class="table">
+                            <thead style="background-color: orange;">
+                                <tr>
+                                    <th scope="col">Descrip/EAN</th>
+                                    <th scope="col">Cant.</th>
+                                    <th scope="col">Precio</th>
+                                    <th scope="col" style="color: red;">Quitar</th>
+                                </tr>
+                            </thead>
+                            <tbody id="itemsMiniCesta">
+                                @foreach (ItemPedido item in cliente.PedidoActual.ElementosPedido)
                                     {
-                                        <partial name="_VistaParcialItemPedido" model="item" />
+                                <partial name="_VistaParcialItemPedido" model="item" />
                                     }
-                                </tbody>
-                            </table>
-                            <p><strong>Tarifa de Servicio:</strong> 7.21 €</p> 
-                            <p><strong>TOTAL: </strong> @(cliente.PedidoActual.Total)</p>
-                            <a asp-controller="Pedido" asp-action="FinalizarPedido" type="button" class="btn btn-outline-light btn-sm">FORMALIZAR</a>
-                            <a href="#" type="button" class="btn btn-outline-light btn-sm disabled">GUARDAR</a>
-                        </div>
-                        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="listas-tab">...</div>
+                            </tbody>
+                        </table>
+                        <p><strong>Tarifa de Servicio:</strong> 7.21 €</p>
+                        <p><strong>TOTAL: </strong> @(cliente.PedidoActual.Total)</p>
+                        <a asp-controller="Pedido" asp-action="FinalizarPedido" type="button" class="btn btn-outline-light btn-sm">FORMALIZAR</a>
+                        <a href="#" type="button" class="btn btn-outline-light btn-sm disabled">GUARDAR</a>
                     </div>
+                    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="listas-tab">...</div>
                 </div>
+            </div>
             }
         </div>
     </div>
@@ -134,6 +134,9 @@
         const categorias = JSON.parse('@Json.Serialize(categorias)')
     </script>
     <script src="~/js/treeviewCategorias.js"></script>
+    <script src="~/js/botonMas.js"></script>
+    <script src="~/js/botonMenos.js"></script>
+    <script src="~/js/botonComprar.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
