--- a/Views/Cliente/Registro.cshtml
+++ b/Views/Cliente/Registro.cshtml
@@ -282,7 +282,7 @@
                         <div class="row">
                             <div class="col-9"></div>
                             <div class="form-group col-3">
-                                <button type="submit" id="btnEnviarAlta" class="btn btn-outline-success">ENVIAR ALTA</button>
+                                <button type="submit" id="btnEnviarAlta" class="btn btn-outline-success" disabled>ENVIAR ALTA</button>
                                 <button type="button" class="btn btn-outline-secondary" onclick="javascript:window.location='https://localhost:44329/Cliente/Login'">CERRAR</button>
                             </div>
                         </div>
